syntax = "proto3";

import "shared.proto";

package auth;

option go_package = "/;proto";

service Admin {
	rpc CreateProblem(CreateRequest) returns (CreateResponse) {}
	rpc GetProblems(shared.ProblemStreamRequest) returns (stream shared.ProblemStream) {}
	rpc UpdateProblem(UpdateRequest) returns (UpdateResponse) {}
	rpc DeleteProblem(DeleteRequest) returns (DeleteResponse) {}
	rpc SwapProblem(SwapRequest) returns (SwapResponse) {}
}

message CreateRequest {
	uint32 at = 1;
}

message CreateResponse {
}

message ReadRequest {
}

message UpdateRequest {
	shared.Problem problem = 1;
}

message UpdateResponse {
}

message DeleteRequest {
	string id = 1;
}

message DeleteResponse {
}

message SwapRequest {
	string a = 1;
	string b = 2;
}

message SwapResponse {
}
